--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -16,7 +16,7 @@
   },
   "tabBar": {
     "color": "#474747",
-    "selectedColor": "#ff0097",
+    "selectedColor": "#FB7299",
     "list": [
       {
         "pagePath": "pages/homePage/homePage",
